tests/js_error/source_locations/expression/yield_star/iterator_close_throws.exp
Error: 
  ┌ tests/js_error/source_locations/expression/yield_star/iterator_close_throws.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (tests/js_error/source_locations/expression/yield_star/iterator_close_throws.js:8:15)
  at generator (tests/js_error/source_locations/expression/yield_star/iterator_close_throws.js:15:3)
  at throw (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/iterator_close_throws.js:20:1)