tests/js_error/source_locations/expression/yield_star/iterator_close_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      get return() {
        throw new Error();
      }
    }
  }
};

function *generator() {
  yield* iterable;
}

var iter = generator();
iter.next();
iter.throw();